refactor(metrics): remove metadata editing
